// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector Schematic With feature flag should create a selector 1`] = `
"import { createFeatureSelector, createSelector } from '@ngrx/store';
import * as fromFoo from './foo.reducer';

export const selectFooState = createFeatureSelector<fromFoo.State>(
  fromFoo.fooFeatureKey
);
"
`;

exports[`Selector Schematic With feature flag should create a selector 2`] = `
"import * as fromFoo from './foo.reducer';
import { selectFooState } from './foo.selectors';

describe('Foo Selectors', () => {
  it('should select the feature state', () => {
    const result = selectFooState({
      [fromFoo.fooFeatureKey]: {}
    });

    expect(result).toEqual({});
  });
});
"
`;

exports[`Selector Schematic With feature flag should group and nest the selectors within a feature 1`] = `
"import { createFeatureSelector, createSelector } from '@ngrx/store';
import * as fromFoo from '../../reducers/foo/foo.reducer';

export const selectFooState = createFeatureSelector<fromFoo.State>(
  fromFoo.fooFeatureKey
);
"
`;

exports[`Selector Schematic With feature flag should group and nest the selectors within a feature 2`] = `
"import * as fromFoo from '../../reducers/foo/foo.reducer';
import { selectFooState } from './foo.selectors';

describe('Foo Selectors', () => {
  it('should select the feature state', () => {
    const result = selectFooState({
      [fromFoo.fooFeatureKey]: {}
    });

    expect(result).toEqual({});
  });
});
"
`;

exports[`Selector Schematic should create selector files 1`] = `
"import { createFeatureSelector, createSelector } from '@ngrx/store';

"
`;

exports[`Selector Schematic should create selector files 2`] = `
"

describe('Foo Selectors', () => {
  it('should select the feature state', () => {
    
  });
});
"
`;

exports[`Selector Schematic should group selectors if group is true 1`] = `
"import { createFeatureSelector, createSelector } from '@ngrx/store';

"
`;

exports[`Selector Schematic should group selectors if group is true 2`] = `
"

describe('Foo Selectors', () => {
  it('should select the feature state', () => {
    
  });
});
"
`;

exports[`Selector Schematic should not flatten selectors if flat is false 1`] = `
"import { createFeatureSelector, createSelector } from '@ngrx/store';

"
`;

exports[`Selector Schematic should not flatten selectors if flat is false 2`] = `
"

describe('Foo Selectors', () => {
  it('should select the feature state', () => {
    
  });
});
"
`;
